--- a/style.css
+++ b/style.css
@@ -1,4 +1,41 @@
+* {
+    background-color: #ADD8E6;
+}
 img {
-    width: 300px;
+    width: 40%;
     height: 300px;
+    display: block;
+    margin: auto;
+    padding: 50px;
+}
+
+#title {
+    text-align: center;
+    font-size: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+}
+
+.portion {
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #000080;	
+}
+
+p {
+    font-family: Tahoma, sans-serif;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+a:hover {
+    text-decoration: none;
+    color: green;
+}
+
+a:visited {
+    text-decoration: bold;
+    color: #C71585;
 }
